@@ -3,6 +3,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+5/24/22: Changes to support Gatan Alpine camera (In 4.0).
+
 5/24/22: Fixed montaging with idoc file, broken 4/22/22 (In 4.0).
 
 5/20/22: Fixed warning of difference between binning of montage set to be
